# lamp

./: CMakeLists.txt  channel.cpp  channel.h  command.cpp  command.h  lamp.cpp  lamp.h  main.cpp  singleton.h
commands/: bad_cmd.cpp  bad_cmd.h  color.cpp  color.h  off.cpp  off.h  on.cpp  on.h  template_cmd.cpp_  template_cmd.h_
